tests/fixtures/invalid/none_mod_list.py
# Cannot modulo None and List[int]
x: None = None % [1, 2, 3]
